feat(payment): integrate duitku payment gateway with checkout flow
- Add DuitkuService for handling payment API integration
- Create Payment model and migration for transaction records
- Implement PaymentController with checkout, callback, and status handling
- Add views for checkout, success, failed, and status pages
- Update template view with buy now button and pricing
- Configure Duitku environment variables and service settings

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,15 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+
+# Duitku Configuration
+DUITKU_MERCHANT_CODE=00000
+DUITKU_API_KEY=00000
+DUITKU_SANDBOX=true
+DUITKU_CALLBACK_URL="${APP_URL}/payment/callback"
+DUITKU_RETURN_URL="${APP_URL}/payment/return"
+
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
